<resources>
    <string name="app_name">DemoAppAlianceTek</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_provider" translatable="false">com.demoAppAlianceTek.fileprovider</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="register">register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="you_are_offline">You are offline</string>
    <string name="video">video</string>
    <string name="photo">photo</string>
    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
</resources>