<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="0dp"
        app:cardBackgroundColor="#bbbbbb"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/item"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textviewView"
            android:text="@string/view"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textviewShare"
            android:text="@string/share"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textviewDownload"
            android:text="@string/download"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>